name:                QuickAsm
version:             0.1
stability:           alpha
homepage:            https://github.com/mgajda/QuickAsm
package-url:         http://hackage.haskell.org/package/QuickAsm
synopsis:            Quick assembly of fragments using NMR restraints.
description:         Toy implementation of fragment assembly.
category:            Bioinformatics 
--license:             BSD3
--license-file:        LICENSE

author:              Michal J. Gajda
copyright:           Copyright by Michal J. Gajda '2013
maintainer:          mjgajda@googlemail.com
bug-reports:         mailto:mjgajda@googlemail.com

build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC==7.4.2
--data-files:          README

source-repository head
  type:     git
  location: git://github.com:mgajda/quickasm.git

Library
  ghc-options:      -fspec-constr-count=4 -O3 
  build-depends:    base>=4.0, base <4.7, containers, hRosetta, AC-Vector, uniplate, mtl, bytestring, Octree >= 0.5, vector
  exposed-modules:  Topo,
                    Score.RDC, Score.DistanceRestraints, Score.Steric,
                    AtomParams
  other-modules:    IdealGeomParams,
                    Util.Fasta, Util.Angle, Util.Geom, Util.MyPrintf,
                    Data.Tree.Util
  exposed:          True

Executable          checkSteric
  build-depends:    QuickAsm, base, hRosetta, bytestring, Octree >= 0.5, containers
  Hs-Source-Dirs:   scripts
  main-is:          checkSteric.hs

Executable          checkRestraints
  build-depends:    QuickAsm, base, hRosetta, bytestring, Octree >= 0.5, containers
  Hs-Source-Dirs:   scripts
  main-is:          checkRestraints.hs

Executable          reconstructBest
  build-depends:    QuickAsm, base, hRosetta, bytestring
  Hs-Source-Dirs:   scripts
  main-is:          reconstructBest.hs

Executable          reconstructNBest
  build-depends:    QuickAsm, base, hRosetta, bytestring, directory, filepath
  Hs-Source-Dirs:   scripts
  main-is:          reconstructNBest.hs

Executable          reconstruct
  build-depends:    QuickAsm, base, hRosetta, bytestring
  Hs-Source-Dirs:   scripts
  main-is:          reconstruct.hs

Test-suite          test_Topo
  build-depends:    QuickAsm, base, hRosetta, bytestring, AC-Vector
  Hs-Source-Dirs:   tests
  main-is:          test_Topo.hs
  type:             exitcode-stdio-1.0

