name:                QuickAsm
version:             0.2
stability:           alpha
homepage:            https://github.com/mgajda/QuickAsm
package-url:         http://hackage.haskell.org/package/QuickAsm
synopsis:            Quick assembly of fragments using NMR restraints.
description:         Toy implementation of fragment assembly.
category:            Bioinformatics 
--license:             BSD3
--license-file:        LICENSE

author:              Michal J. Gajda
copyright:           Copyright by Michal J. Gajda '2013
maintainer:          mjgajda@googlemail.com
bug-reports:         mailto:mjgajda@googlemail.com

build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC==7.4.2
--data-files:          README

source-repository head
  type:     git
  location: git://github.com:mgajda/quickasm.git

Library
  ghc-options:      -fspec-constr-count=4 -O3 
  build-depends:    base>=4.0, base <4.7, containers, hRosetta, AC-Vector, uniplate, mtl, bytestring, Octree >= 0.5, vector, deepseq >= 1.3.0.0,
                    random, temporary >= 1.1.0.0, time, filepath, unix, process, directory
  exposed-modules:  Topo,
                    Util.Angle, Util.Fasta, Util.Timing, Util.Assert, Util.Show,
                    Score.ScoreSet, Score.ScoringFunction,
                    Score.Steric,
                    Score.RDC, Score.DistanceRestraints,
                    Score.Sparta
                    AtomParams,
                    FragReplace,
                    Model, Modelling,
                    Annealing, REMC,
                    RepeatPolymer
  other-modules:    IdealGeomParams,
                    Util.Geom, Util.MyPrintf, Util.Process, Util.Monad,
                    Data.Tree.Util
  exposed:          True

Executable          checkSteric
  build-depends:    QuickAsm, base, hRosetta, bytestring, Octree >= 0.5, containers
  Hs-Source-Dirs:   scripts
  main-is:          checkSteric.hs

Executable          checkRestraints
  build-depends:    QuickAsm, base, hRosetta, bytestring, Octree >= 0.5, containers
  Hs-Source-Dirs:   scripts
  main-is:          checkRestraints.hs

Executable          reconstructBest
  build-depends:    QuickAsm, base, hRosetta, bytestring
  Hs-Source-Dirs:   scripts
  main-is:          reconstructBest.hs

Executable          reconstructNBest
  build-depends:    QuickAsm, base, hRosetta, bytestring, directory, filepath, deepseq
  Hs-Source-Dirs:   scripts
  ghc-options:      -rtsopts
  main-is:          reconstructNBest.hs

Executable          reconstruct
  build-depends:    QuickAsm, base, hRosetta, bytestring
  Hs-Source-Dirs:   scripts
  main-is:          reconstruct.hs

Executable          FragSample
  build-depends:    QuickAsm, base, hRosetta, bytestring, vector, random, deepseq
  Hs-Source-Dirs:   scripts
  main-is:          FragSample.hs

Executable          score
  build-depends:    QuickAsm, base, hRosetta, bytestring, deepseq >= 1.3.0.0, containers, time
  Hs-Source-Dirs:   scripts
  main-is:          score.hs

Test-suite          test_Topo
  build-depends:    QuickAsm, base, hRosetta, bytestring, AC-Vector
  Hs-Source-Dirs:   tests
  main-is:          test_Topo.hs
  type:             exitcode-stdio-1.0

Test-suite          test_Sparta
  build-depends:    QuickAsm, base, hRosetta, bytestring, AC-Vector, time, deepseq, filepath, process, unix, directory
  Hs-Source-Dirs:   tests
  main-is:          test_Sparta.hs
  type:             exitcode-stdio-1.0

Test-suite          test_Polymer
  build-depends:    QuickAsm, base, hRosetta, bytestring, AC-Vector, time, deepseq, filepath, process, unix, directory, random, vector >= 0.9.1
  Hs-Source-Dirs:   tests
  main-is:          test_Polymer.hs
  type:             exitcode-stdio-1.0

Test-suite          test_REMC
  build-depends:    QuickAsm, base, hRosetta, bytestring, AC-Vector, time, deepseq, filepath, process, unix, directory, random, vector >= 0.9.1
  Hs-Source-Dirs:   tests
  main-is:          test_REMC.hs
  type:             exitcode-stdio-1.0

