name:                QuickAsm
version:             0.3
stability:           alpha
homepage:            https://github.com/mgajda/QuickAsm
package-url:         http://hackage.haskell.org/package/QuickAsm
synopsis:            Quick assembly of fragments using NMR restraints.
description:         Toy implementation of fragment assembly.
category:            Bioinformatics 
--license:             BSD3
--license-file:        LICENSE

author:              Michal J. Gajda
copyright:           Copyright by Michal J. Gajda '2013
maintainer:          mjgajda@googlemail.com
bug-reports:         mailto:mjgajda@googlemail.com

build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC==7.4.2
--data-files:          README

flag old-bytestring
  description:      Use old bytestring (versions 0.9.*, before GHC 7.6 series.)
  default:          False

source-repository head
  type:     git
  location: git://github.com:mgajda/quickasm.git

Library
  ghc-options:      -fspec-constr-count=4 -O3 
  build-depends:    base>=4.0, base <4.7, containers, hRosetta, AC-Vector, uniplate, mtl, bytestring, Octree >= 0.5, vector, deepseq >= 1.3.0.0,
                    random, temporary >= 1.1.0.0, time, filepath, unix, process, directory, parallel-io
  exposed-modules:  Topo,
                    Util.Angle,  Util.Fasta, Util.Timing,
                    Util.Assert, Util.Show,  Util.Random,
                    Score.ScoreSet, Score.ScoringFunction,
                    Score.Steric,
                    Score.RDC, Score.DistanceRestraints,
                    Score.Sparta
                    AtomParams,
                    FragReplace,
                    Model, Modelling,
                    Annealing, REMC,
                    RepeatPolymer
  other-modules:    IdealGeomParams,
                    Util.Geom, Util.MyPrintf, Util.Process, Util.Monad,
                    Util.Parallel,
                    Data.Tree.Util
  exposed:          True
  if flag(old-bytestring)
    cpp-options:      -DOLD_BYTESTRING=1
    build-depends: bytestring <= 0.9.2.1
  else
    build-depends: bytestring >= 0.10.0.0

Executable          checkSteric
  build-depends:    QuickAsm, base, hRosetta, bytestring, Octree >= 0.5, containers
  Hs-Source-Dirs:   scripts
  main-is:          checkSteric.hs

Executable          checkRestraints
  build-depends:    QuickAsm, base, hRosetta, bytestring, Octree >= 0.5, containers
  Hs-Source-Dirs:   scripts
  main-is:          checkRestraints.hs

Executable          reconstructBest
  build-depends:    QuickAsm, base, hRosetta, bytestring
  Hs-Source-Dirs:   scripts
  main-is:          reconstructBest.hs

Executable          reconstructNBest
  build-depends:    QuickAsm, base, hRosetta, bytestring, directory, filepath, deepseq
  Hs-Source-Dirs:   scripts
  ghc-options:      -rtsopts
  main-is:          reconstructNBest.hs

Executable          reconstruct
  build-depends:    QuickAsm, base, hRosetta, bytestring
  Hs-Source-Dirs:   scripts
  main-is:          reconstruct.hs

Executable          FragSample
  build-depends:    QuickAsm, base, hRosetta, bytestring, vector, random, deepseq
  Hs-Source-Dirs:   scripts
  main-is:          FragSample.hs

Executable          score
  build-depends:    QuickAsm, base, hRosetta, bytestring, deepseq >= 1.3.0.0, containers, time
  Hs-Source-Dirs:   scripts
  main-is:          score.hs

Test-suite          test_Topo
  build-depends:    QuickAsm, base, hRosetta, bytestring, AC-Vector
  Hs-Source-Dirs:   tests
  main-is:          test_Topo.hs
  type:             exitcode-stdio-1.0

Test-suite          test_Sparta
  build-depends:    QuickAsm, base, hRosetta, bytestring, AC-Vector, time, deepseq, filepath, process, unix, directory
  Hs-Source-Dirs:   tests
  main-is:          test_Sparta.hs
  type:             exitcode-stdio-1.0
  if flag(old-bytestring)
    cpp-options:      -DOLD_BYTESTRING=1
    build-depends: bytestring <= 0.9.2.1
  else
    build-depends: bytestring >= 0.10.0.0

Test-suite          test_Polymer
  build-depends:    QuickAsm, base, hRosetta, bytestring, AC-Vector, time, deepseq, filepath, process, unix, directory, random, vector >= 0.9.1
  Hs-Source-Dirs:   tests
  main-is:          test_Polymer.hs
  type:             exitcode-stdio-1.0

Test-suite          test_REMC_QC
  build-depends:    QuickAsm, base, hRosetta, bytestring, AC-Vector, time, deepseq, filepath, process, unix, directory, random, vector >= 0.9.1, QuickCheck >= 2.5.1.1
  Hs-Source-Dirs:   tests
  main-is:          test_REMC_QC.hs
  type:             exitcode-stdio-1.0

